metadata/force-app/main/default/objects/CustomName_lwSYu__c/CustomName_lwSYu__c.object-meta.xml
<CustomObject>
    <description>Description_kickv</description>
    <label>CustomLabel_ILgJB</label>
    <nameField>
        <label>CustomLabel_ILgJB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_ILgJBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>