metadata/force-app/main/default/objects/CustomName_lwSYu__c/fields/CustomField_CfaOG__c.field-meta.xml
<CustomField>
    <fullName>CustomField_CfaOG__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldwHFFz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>